# parallel-rm-rf

./: README.md  pyproject.toml
parallel_rm_rf/: __init__.py  __main__.py  remover.py
